# dh-cofares-pdc-back

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai/: sample-chat.py  sample-embedding.py
app/: main.py
app/auth/: __init__.py
app/models/: __init__.py
app/routers/: chatbot.py  users.py
