[tool.poetry]
name = "dh-cofares-pdc-back"
version = "0.1.0"
description = ""
authors = ["Raul Ceron <receronp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
psycopg = "^3.2.3"
psycopg-pool = "^3.2.3"
langgraph = ">0.2.27"
langgraph-checkpoint-postgres = "^2.0.2"
langchain = "^0.3.4"
langchain-google-vertexai = "^2.0.5"
langchain-google-community = {extras = ["featurestore"], version = "^2.0.1"}
langchain-core = "^0.3.13"
httpx = "^0.27.2"
sqlmodel = "^0.0.22"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
